# ridsport

./: Makefile  pyproject.toml  run.py
scripts/: login_page.html  run.sh
src/: client.py
