[tool.poetry]
name = "ridsport"
version = "0.1.0"
description = "Automatic booking of horse competitions"
authors = ["Viktor Melker <viktormelker@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "mypy"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
